--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -42,14 +42,14 @@
         android:id="@+id/register_textBoxName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint="First name"
+        android:hint="Username"
         android:minHeight="48dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_textBoxPassword"
         app:startIconDrawable="@drawable/ic_baseline_person_24"
-        app:startIconContentDescription="First name"
+        app:startIconContentDescription="Username"
         app:endIconMode="clear_text"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
@@ -80,27 +80,6 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/register_textBoxSurname"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:hint="Surname"
-        android:minHeight="48dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_textBoxName"
-        app:startIconDrawable="@drawable/ic_baseline_person_24"
-        app:startIconContentDescription="Surname"
-        app:endIconMode="clear_text"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
     <Button
         android:id="@+id/register_button"
         android:layout_width="117dp"
@@ -110,7 +89,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_textBoxSurname" />
+        app:layout_constraintTop_toBottomOf="@+id/register_textBoxName" />
 
     <ImageView
         android:id="@+id/registerImage"
