--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -6,110 +6,122 @@
     android:layout_height="match_parent"
     tools:context=".AddItem">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="86dp"
-        android:layout_height="93dp"
-        app:srcCompat="@android:drawable/ic_menu_camera"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="63dp" />
+    <LinearLayout
+        android:layout_width="395dp"
+        android:layout_height="720dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="16dp">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_label"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="171dp" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="86dp"
+            android:layout_height="93dp"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="358dp"
-        android:layout_height="24dp"
-        tools:layout_editor_absoluteX="22dp"
-        tools:layout_editor_absoluteY="366dp" />
+        <Button
+            android:id="@+id/upload_image_button"
+            android:layout_width="216dp"
+            android:layout_height="wrap_content"
+            android:text="@string/upload_image_label"
+            android:background="@drawable/rounded_button" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/description_label"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="402dp" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_label"
+            android:textColor="@color/black" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="373dp"
-        android:layout_height="79dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="431dp" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/title_textview"
+            android:layout_width="300dp"
+            android:layout_height="30dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="202dp" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="284dp" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sub_title_label"
+            android:textColor="@color/black" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/custom_description_label"
-        tools:layout_editor_absoluteX="19dp"
-        tools:layout_editor_absoluteY="518dp" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/sub_title_textview"
+            android:layout_width="300dp"
+            android:layout_height="30dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/category_label"
-        tools:layout_editor_absoluteX="22dp"
-        tools:layout_editor_absoluteY="337dp" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sub_title_label"
-        tools:layout_editor_absoluteX="25dp"
-        tools:layout_editor_absoluteY="257dp" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/category_label"
+            android:textColor="@color/black" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/discard_label"
-        tools:layout_editor_absoluteX="53dp"
-        tools:layout_editor_absoluteY="624dp" />
+        <Spinner
+            android:id="@+id/category_dropdown"
+            android:layout_width="300dp"
+            android:layout_height="24dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_label"
-        tools:layout_editor_absoluteX="242dp"
-        tools:layout_editor_absoluteY="626dp" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/description_label"
+            android:textColor="@color/black" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/plus_sign_label"
-        tools:layout_editor_absoluteX="22dp"
-        tools:layout_editor_absoluteY="544dp" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/description_textview"
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:ems="10"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/custom_description_label"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/add_custom_button"
+            android:layout_width="41dp"
+            android:layout_height="44dp"
+            android:background="@drawable/rounded_button"
+            android:text="@string/plus_sign_label" />
+
+        <Button
+            android:id="@+id/discard_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_red_button"
+            android:text="@string/discard_label" />
+
+        <Button
+            android:id="@+id/add_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_button"
+            android:text="@string/add_label" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
