--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="containerColor">#F3F3F3</color>
+    <color name="errorColor">#FB4747</color>
+    <color name="infoColor">#03A9F4</color>
 </resources>
