--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorContainer">@color/containerColor</item>
+        <item name="colorError">@color/errorColor</item>
+        <item name="colorTertiary">@color/infoColor</item>
     </style>
 </resources>
