--- a/app/src/main/res/drawable/circle_image.xml
+++ b/app/src/main/res/drawable/circle_image.xml
@@ -1,11 +1,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:innerRadius="0dp"
     android:shape="ring"
-    android:thicknessRatio="1.9"
-    android:useLevel="false" >
-    <solid android:color="@android:color/transparent" />
+    android:thicknessRatio="2"
+    android:useLevel="false">
+
+    <solid
+        android:color="@android:color/transparent" />
 
     <stroke
-        android:width="3dp"
+        android:width="1dp"
         android:color="@android:color/black" />
 </shape>
