--- a/app/src/main/res/layout/fragment_personal_catagory.xml
+++ b/app/src/main/res/layout/fragment_personal_catagory.xml
@@ -8,7 +8,7 @@
     tools:context=".personalCategory">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/personalCategory_txtBoxSearch"
+        android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,6 +25,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/personalCategory_txtBoxSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -34,11 +35,10 @@
         android:id="@+id/personal_catergoriesListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="15dp"
-        tools:listitem="@layout/collection_list_item"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/personalCategory_txtBoxSearch" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        tools:listitem="@layout/collection_list_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
