--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -120,24 +120,27 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="88dp"
                 android:gravity="center">
-                <Button
-
-                    android:layout_width="165dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="19dp"
-
-                    android:text="Discard" />
 
                 <Button
-                    android:layout_width="165dp"
+                    android:id="@+id/button1"
+                    android:layout_marginRight="30dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="19dp"
+                    android:text="discard"
+                    android:textSize="12dp" />
 
-                    android:text="Add new" />
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_marginLeft="30dp"
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:text="Add new"
+                    android:textSize="12dp" />
             </LinearLayout>
         </RelativeLayout>
 
