--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -24,10 +24,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/user_userImage"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 app:civ_border_color="#FF000000"
                 app:civ_border_width="2dp"
                 tools:ignore="MissingClass" />
@@ -43,14 +43,14 @@
                     android:id="@+id/user_txtboxEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/user_txtboxUsername"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp" />
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
@@ -122,8 +122,8 @@
 
             <ImageView
                 android:id="@+id/icon1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 app:srcCompat="@drawable/ic_outline_all_inbox_24"
                 app:tint="@color/browser_actions_text_color" />
 
@@ -134,7 +134,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_weight="1"
                 android:textColor="@color/black"
-                android:textSize="34sp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <TextView
@@ -160,8 +160,8 @@
 
             <ImageView
                 android:id="@+id/icon2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 app:srcCompat="@drawable/ic_outline_inbox_24"
                 app:tint="@color/browser_actions_text_color" />
 
@@ -172,7 +172,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_weight="1"
                 android:textColor="@color/black"
-                android:textSize="34sp" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
