--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -42,7 +42,7 @@ tools:context=".activities.add_category">
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:maxHeight="100dp"
-            android:src="@drawable/boxes"></ImageView>
+            android:src="@drawable/ic_boxes_image"></ImageView>
 
         <TextView
             android:layout_width="wrap_content"
