--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -77,15 +77,14 @@
                 android:maxWidth="250px"
                 android:text="Update" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/user_btnDelete"
                 android:layout_width="25dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_weight="1"
-                android:background="@drawable/rounded_red_button"
+                android:background="@drawable/discard_button"
                 android:maxWidth="250px"
-                android:backgroundTint="@color/errorColor"
                 android:text="Delete" />
         </LinearLayout>
 
@@ -121,11 +120,10 @@
             app:layout_constraintTop_toBottomOf="@id/user_totalCrateHeader">
 
             <ImageView
-                android:id="@+id/icon1"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:srcCompat="@drawable/ic_outline_all_inbox_24"
-                app:tint="@color/browser_actions_text_color" />
+                android:src="@drawable/ic_boxes_image">
+            </ImageView>
 
             <TextView
                 android:id="@+id/user_totalCrates"
@@ -159,11 +157,11 @@
             app:layout_constraintTop_toBottomOf="@id/user_totalItemsHeader">
 
             <ImageView
-                android:id="@+id/icon2"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:srcCompat="@drawable/ic_outline_inbox_24"
-                app:tint="@color/browser_actions_text_color" />
+                android:src="@drawable/ic_box_image">
+
+            </ImageView>
 
             <TextView
                 android:id="@+id/user_totalItems"
@@ -187,16 +185,15 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/user_signOut"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rounded_red_button"
-                android:backgroundTint="@color/errorColor"
+                android:background="@drawable/discard_button"
                 android:text="Sign out" />
         </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout><![CDATA[
 
         android:id="@+id/coordinatorLayout"
         android:layout_width="0dp"
@@ -205,20 +202,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/user_bottomAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:backgroundTint="?colorPrimary"
-            app:menu="@menu/bottom_app_bar"
-            app:navigationIcon="@drawable/ic_round_menu_24" />
+    ]]>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/user_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="69dp"
-            app:layout_anchor="@id/user_bottomAppBar"
-            app:srcCompat="@drawable/ic_baseline_add_24"
-            tools:ignore="SpeakableTextPresentCheck" />
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/user_bottomAppBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:backgroundTint="?colorPrimary"
+        app:menu="@menu/bottom_app_bar"
+        app:navigationIcon="@drawable/ic_round_menu_24" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/user_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="69dp"
+        app:layout_anchor="@id/user_bottomAppBar"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        tools:ignore="SpeakableTextPresentCheck" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
