--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -19,11 +19,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ADD NEW"
+            android:text="@string/add_new_label"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="24dp"
-
             android:textStyle="bold">
 
         </TextView>
@@ -56,7 +55,7 @@
                     android:id="@+id/t1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="CRAYTS"
+                    android:text="@string/crayts_label"
                     android:textColor="@color/black"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -78,7 +77,7 @@
                     android:layout_below="@id/t2"
                     android:layout_marginTop="19dp"
 
-                    android:text="Add new" />
+                    android:text="@string/add_new_label" />
 
                 <ImageView
                     android:layout_width="150dp"
@@ -142,7 +141,7 @@
                     android:layout_below="@id/t4"
                     android:layout_marginTop="19dp"
 
-                    android:text="Add new" />
+                    android:text="@string/add_new_label" />
 
                 <ImageView
                     android:layout_width="150dp"
