--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -78,7 +78,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/rounded_button"
                 android:maxWidth="250px"
-                android:text="Update" />
+                android:text="@string/update_button" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/user_btnDelete"
@@ -88,7 +88,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/discard_button"
                 android:maxWidth="250px"
-                android:text="Delete" />
+                android:text="@string/delete_button" />
         </LinearLayout>
 
         <View
@@ -106,7 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Total crates"
+            android:text="@string/total_crayts_label"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/user_lineBreak" />
@@ -142,7 +142,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Total items"
+            android:text="@string/total_items_label"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/user_totalCrateContainer" />
@@ -192,7 +192,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/discard_button"
-                android:text="Sign out" />
+                android:text="@string/sign_out_button" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
